UPDATE: set the size of the entries at a fixed width, so they still align

--- a/dx/force-app/main/default/lwc/th_trailheadAssignments/th_trailheadAssignments.css
+++ b/dx/force-app/main/default/lwc/th_trailheadAssignments/th_trailheadAssignments.css
@@ -1,3 +1,8 @@
 .center-text {
     text-align:center;
 }
+
+.assignment {
+    width: 330px;
+    /* float: left; */
+}
